--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Rename jar to server.jar
         run: |
           mkdir artifacts
-          cp build/libs/nukkit-1.0-SNAPSHOT.jar artifacts/server.jar
+          cp target/nukkit-1.0-SNAPSHOT.jar artifacts/server.jar
 
       - name: Delete old "automatic" release if exists
         uses: dev-drprasad/delete-tag-and-release@v1.1
